# cmon

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml
cmon/: __main__.py  _docker.py  _monitor.py  _plot.py
contmon/: __main__.py  _docker.py  _plot.py  monitor.py
tests/compose/: docker-compose.yml
